tests/test_func/bad/output/recursive.catala_en.RecursiveFunc.Interpret
[ERROR] The variable f is used in one of its definitions, but recursion is forbidden in Catala

 --> tests/test_func/bad/recursive.catala_en
  | 
8 |   definition f of x equals f of x + 1
  |                            ^
  + Article
